--- a/conda_env/pysesa.yml
+++ b/conda_env/pysesa.yml
@@ -1,8 +1,8 @@
-#conda env create -f pysesa/pysesa.yml
+#conda env create -f conda_env/pysesa.yml
 #conda activate pysesa
 name: pysesa
 channels:
-  - conda-forge
+  - conda
   - defaults
 dependencies:
   - python==3.7
@@ -15,5 +15,4 @@ dependencies:
   - laspy
   - statsmodels
   - pip
-pip:
   - scikit-learn
